--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="contenedor-imagen">
-            <img src="/web-qr/img/photo_5990061141520399736_w.jpg" alt="">
+            <img src="/img/photo_5990061141520399736_w.jpg" alt="">
         </div>
         <div class="contenedor-h1">
             <h1>ISAAC LEZAMETA</h1>
@@ -21,10 +21,10 @@
     </header>
     <section class="redes">
         <ul>
-            <li><a href="www.instagram.com" target="_blank" aria-label="Instagram"><img class="icono" src="/web-qr/img/solicitud.png" alt="Instagram"></a></li>
-            <li><a href="www.whatsappweb.com" target="_blank"><img class="icono" src="/web-qr/img/whatsapp.png" alt=""></li>
-            <li><a href="www.gmail.com"><img class="icono"src="/web-qr/img/logotipo-de-gmail.png" alt=""></a></li>
-            <li><a href="www.behance.com"><img class= "icono" src="/web-qr/img/behance.png" alt=""></a></li>
+            <li><a href="www.instagram.com" target="_blank" aria-label="Instagram"><img class="icono" src="/img/solicitud.png" alt="Instagram"></a></li>
+            <li><a href="www.whatsappweb.com" target="_blank"><img class="icono" src="/img/whatsapp.png" alt=""></li>
+            <li><a href="www.gmail.com"><img class="icono"src="/img/logotipo-de-gmail.png" alt=""></a></li>
+            <li><a href="www.behance.com"><img class= "icono" src="/img/behance.png" alt=""></a></li>
         </ul>
     </section>
 </body>
