--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </header>
     <section class="redes">
         <ul>
-            <li><a href="www.instagram.com" target="_blank" aria-label="Instagram"><img class="icono" src="img/solicitud.png" alt="Instagram"></a></li>
-            <li><a href="www.whatsappweb.com" target="_blank"><img class="icono" src="img/whatsapp.png" alt=""></li>
-            <li><a href="www.gmail.com"><img class="icono"src="img/logotipo-de-gmail.png" alt=""></a></li>
-            <li><a href="www.behance.com"><img class= "icono" src="img/behance.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><img class="icono" src="img/solicitud.png" alt="Instagram"></a></li>
+            <li><a href="https://www.whatsappweb.com" target="_blank"><img class="icono" src="img/whatsapp.png" alt="whatsapp"></li>
+            <li><a href="https://www.gmail.com" target="_blank"><img class="icono"src="img/logotipo-de-gmail.png" alt="gmail"></a></li>
+            <li><a href="https://www.behance.net" target="_blank"><img class= "icono" src="img/behance.png" alt="behance"></a></li>
         </ul>
     </section>
 </body>
